# pdf-preflight

./: .gitignore  agents.md  pyproject.toml  requirements.txt  run.bat  run.py
memory/: 2026-07-11-overprint-separation-shift.md
resources/: rules.yaml
src/pdfpreflight/: __main__.py
src/preflight/: analyzer.py  color_spaces.py  rules.py
src/preview/: color_picker.py  content_stream.py  object_filter.py  overprint.py  pdf_inspector.py  separation.py  simulation.py
src/viewer/: main_window.py  overlay.py  page_widget.py  render_engine.py
tests/: debug_cs.py  debug_op_map.py  debug_overprint2.py  debug_overprint_pos.py  explore_overprint.py  generate_overprint_pdf.py  generate_test_pdf.py  generate_test_pdfs.py  test_cmyk_pdf.py  test_color_picker_fix.py  test_content_stream.py  test_integration.py  test_op_map.py  test_overprint_detailed.py  test_overprint_render.py  test_overprint_sim.py  test_pipeline.py  test_uj_overprint.py  test_white_overprint.py  trace_extgstate.py
